--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GendingHotelManagement">
-        <activity android:name=".ForgotPassword" android:theme="@style/Theme.GendingHotelManagement.NoActionBar"></activity>
-        <activity android:name=".Login" android:theme="@style/Theme.GendingHotelManagement.NoActionBar" />
-        <activity android:name=".MainActivity" android:theme="@style/Theme.GendingHotelManagement.NoActionBar">
+        <activity android:name=".SignUp"></activity>
+        <activity
+            android:name=".ForgotPassword"
+            android:theme="@style/Theme.GendingHotelManagement.NoActionBar" />
+        <activity
+            android:name=".Login"
+            android:theme="@style/Theme.GendingHotelManagement.NoActionBar" />
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/Theme.GendingHotelManagement.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
