Commited by Caiying 1004

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GendingHotelManagement">
-        <activity android:name=".Receipt"></activity>
+        <activity android:name=".RoomOccupancyStatus"></activity>
+        <activity android:name=".CheckRoomOccupancy" />
+        <activity android:name=".ArrangeStaffSchedule" />
+        <activity android:name=".ArrangeShift" />
+        <activity android:name=".CheckOutDetails" />
+        <activity android:name=".CheckOutForm" />
+        <activity android:name=".CheckInDetails" />
+        <activity android:name=".CheckInForm" />
+        <activity android:name=".CustomerActivity" />
+        <activity android:name=".OnlineOrderConfirmation" />
+        <activity android:name=".SearchBooking" />
+        <activity android:name=".Receipt" />
         <activity android:name=".Payment" />
         <activity android:name=".OrderConfirmation" />
         <activity android:name=".OrderDetails" />
