Commited by caiying 1004(1)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,30 +9,75 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GendingHotelManagement">
-        <activity android:name=".RoomOccupancyStatus"></activity>
-        <activity android:name=".CheckRoomOccupancy" />
-        <activity android:name=".ArrangeStaffSchedule" />
-        <activity android:name=".ArrangeShift" />
-        <activity android:name=".CheckOutDetails" />
-        <activity android:name=".CheckOutForm" />
-        <activity android:name=".CheckInDetails" />
-        <activity android:name=".CheckInForm" />
-        <activity android:name=".CustomerActivity" />
-        <activity android:name=".OnlineOrderConfirmation" />
-        <activity android:name=".SearchBooking" />
-        <activity android:name=".Receipt" />
-        <activity android:name=".Payment" />
-        <activity android:name=".OrderConfirmation" />
-        <activity android:name=".OrderDetails" />
-        <activity android:name=".DateSelection" />
-        <activity android:name=".ViewWorkingSchedule" />
-        <activity android:name=".ManageSchedule" />
-        <activity android:name=".EditProfile" />
-        <activity android:name=".RemoveStaff" />
-        <activity android:name=".CreateStaff" />
-        <activity android:name=".StaffManagement" />
-        <activity android:name=".NormalStaffPortal" />
-        <activity android:name=".ManagerStaffPortal" />
+        <activity
+            android:name=".RoomOccupancyStatus"
+            android:theme="@style/Theme.GendingHotelManagement.NoActionBar"/>
+        <activity
+            android:name=".CheckRoomOccupancy"
+            android:theme="@style/Theme.GendingHotelManagement.NoActionBar"/>
+        <activity
+            android:name=".ArrangeStaffSchedule"
+            android:theme="@style/Theme.GendingHotelManagement.NoActionBar"/>
+        <activity
+            android:name=".ArrangeShift"
+            android:theme="@style/Theme.GendingHotelManagement.NoActionBar"/>
+        <activity
+            android:name=".CheckOutDetails"
+            android:theme="@style/Theme.GendingHotelManagement.NoActionBar"/>
+        <activity
+            android:name=".CheckOutForm"
+            android:theme="@style/Theme.GendingHotelManagement.NoActionBar"/>
+        <activity
+            android:name=".CheckInDetails"
+            android:theme="@style/Theme.GendingHotelManagement.NoActionBar"/>
+        <activity
+            android:name=".CheckInForm"
+            android:theme="@style/Theme.GendingHotelManagement.NoActionBar"/>
+        <activity
+            android:name=".CustomerActivity"
+            android:theme="@style/Theme.GendingHotelManagement.NoActionBar"/>
+        <activity
+            android:name=".OnlineOrderConfirmation"
+            android:theme="@style/Theme.GendingHotelManagement.NoActionBar"/>
+        <activity
+            android:name=".SearchBooking"
+            android:theme="@style/Theme.GendingHotelManagement.NoActionBar"/>
+        <activity
+            android:name=".Receipt"
+            android:theme="@style/Theme.GendingHotelManagement.NoActionBar"/>
+        <activity
+            android:name=".Payment"
+            android:theme="@style/Theme.GendingHotelManagement.NoActionBar"/>
+        <activity
+            android:name=".OrderConfirmation"
+            android:theme="@style/Theme.GendingHotelManagement.NoActionBar"/>
+        <activity
+            android:name=".OrderDetails"
+            android:theme="@style/Theme.GendingHotelManagement.NoActionBar"/>
+        <activity
+            android:name=".DateSelection"
+            android:theme="@style/Theme.GendingHotelManagement.NoActionBar"/>
+        <activity
+            android:name=".ViewWorkingSchedule"
+            android:theme="@style/Theme.GendingHotelManagement.NoActionBar"/>
+        <activity
+            android:name=".ManageSchedule"
+            android:theme="@style/Theme.GendingHotelManagement.NoActionBar"/>
+        <activity
+            android:name=".EditProfile"
+            android:theme="@style/Theme.GendingHotelManagement.NoActionBar"/>
+        <activity
+            android:name=".RemoveStaff"
+            android:theme="@style/Theme.GendingHotelManagement.NoActionBar"/>
+        <activity
+            android:name=".CreateStaff"
+            android:theme="@style/Theme.GendingHotelManagement.NoActionBar"/>
+        <activity
+            android:name=".NormalStaffPortal"
+            android:theme="@style/Theme.GendingHotelManagement.NoActionBar"/>
+        <activity
+            android:name=".ManagerStaffPortal"
+            android:theme="@style/Theme.GendingHotelManagement.NoActionBar"/>
         <activity
             android:name=".SignUp"
             android:theme="@style/Theme.GendingHotelManagement.NoActionBar" />
@@ -47,7 +92,6 @@
             android:theme="@style/Theme.GendingHotelManagement.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
