--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation platform('com.google.firebase:firebase-bom:26.8.0')
+    implementation "com.jakewharton:butterknife:8.8.1"
 }
