--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation platform('com.google.firebase:firebase-bom:26.8.0')
     implementation "com.jakewharton:butterknife:8.8.1"
+    implementation 'com.firebaseui:firebase-ui-database:2.3.0'
+    implementation 'com.google.firebase:firebase-database:11.0.4'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation "androidx.cardview:cardview:1.0.0"
+
 }
